--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,13 +1,13 @@
 NotBlank={0} é obrigatório
 NotNull={0} é obrigatório
 PositiveOrZero={0} deve ser um valor maior ou igual a zero
-Digits=valor numérico fora dos limites de {2} digitos e {1} casas decimais
 
 # Cozinha
 cozinha.nome=Nome da cozinha
 cozinha.id=Código da cozinha
 
 # Restaurante
+Digits.restaurante.taxaFrete=valor numérico fora dos limites de {2} digitos e {1} casas decimais
 NotNull.restaurante.taxaFrete={0} é obrigatória
 NotNull.restaurante.cozinha={0} é obrigatória
 restaurante.nome=Nome do restaurante
