implementando os endpoints de grupos

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,3 +28,11 @@ cidade.estado=Estado da cidade
 NotBlank.formaPagamentoInput.descricao={0} é obrigatória
 formaPagamentoInput.id=Código da forma de pagamento
 formaPagamentoInput.descricao=Descrição da forma de pagamento
+
+# Grupos
+grupoInput.nome=Nome do grupo
+
+
+
+
+
