--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -47,6 +47,11 @@ NotBlank.senhaInput.novaSenha={0} é obrigatória
 senhaInput.senhaAtual=Senha atual
 senhaInput.novaSenha=Nova senha
 
+produtoInput.nome=Nome do produto
+produtoInput.descricao=Descrição do produto
+produtoInput.preco=Preço do produto
+produtoInput.ativo=Status do produto
+
 
 
 
