--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,58 +1,75 @@
 NotBlank={0} é obrigatório
 NotNull={0} é obrigatório
 PositiveOrZero={0} deve ser um valor maior ou igual a zero
-
-TaxaFrete.invalida={0} esta invalido
+Email={0} deve ser um endereço de e-mail válido
+Multiplo={0} deve ser um valor múltiplo de {1}
+ValorZeroIncluiDescricao={1} deve conter {2}
+typeMismatch.java.time.OffsetDateTime={0} deve ser uma data/hora válida
+typeMismatch.java.lang.Long={0} deve ser um número válido
 
 # Cozinha
-cozinha.nome=Nome da cozinha
 cozinha.id=Código da cozinha
+cozinhaInput.id=Código da cozinha
+cozinhaInput.nome=Nome da cozinha
 
 # Restaurante
-Digits.restauranteInput.taxaFrete=valor numérico fora dos limites de {2} digitos e {1} casas decimais
 NotNull.restauranteInput.taxaFrete={0} é obrigatória
 NotNull.restauranteInput.cozinha={0} é obrigatória
 restauranteInput.nome=Nome do restaurante
 restauranteInput.cozinha=Cozinha do restaurante
 restauranteInput.taxaFrete=Taxa de frete do restaurante
+restaurante.id=Código do restaurante
 
 # Estado
-estado.nome=Nome do estado
 estado.id=Código do estado
+estadoInput.id=Código do estado
+estadoInput.nome=Nome do estado
 
 # Cidade
-cidade.nome=Nome da cidade
-cidade.estado=Estado da cidade
+cidadeInput.nome=Nome da cidade
+cidadeInput.estado=Estado da cidade
 
-# forma Pagamentos
+# Forma de pagamento
 NotBlank.formaPagamentoInput.descricao={0} é obrigatória
 formaPagamentoInput.id=Código da forma de pagamento
 formaPagamentoInput.descricao=Descrição da forma de pagamento
+formaPagamento.id=Código da forma de pagamento
+
+# Endereco
+endereco=Endereço
+endereco.logradouro=Logradouro
+endereco.numero=Número do logradouro
+endereco.cidade=Cidade
+endereco.cidade.id=Código da cidade
+endereco.cep=CEP
+endereco.bairro=Bairro
 
 # Grupo
 grupoInput.nome=Nome do grupo
 
 # Usuario
-
 NotBlank.usuarioComSenhaInput.senha={0} é obrigatória
 usuarioComSenhaInput.nome=Nome do usuário
 usuarioComSenhaInput.email=E-mail do usuário
 usuarioComSenhaInput.senha=Senha do usuário
 
+NotBlank.usuarioInput.senha={0} é obrigatória
 usuarioInput.nome=Nome do usuário
 usuarioInput.email=E-mail do usuário
 
+# Senha
 NotBlank.senhaInput.senhaAtual={0} é obrigatória
 NotBlank.senhaInput.novaSenha={0} é obrigatória
 senhaInput.senhaAtual=Senha atual
 senhaInput.novaSenha=Nova senha
 
+# Produto
 produtoInput.nome=Nome do produto
 produtoInput.descricao=Descrição do produto
 produtoInput.preco=Preço do produto
 produtoInput.ativo=Status do produto
 
-
+# Pedido
 NotNull.pedidoInput.itens.produtoId=Código do produto no item é obrigatório
 NotNull.pedidoInput.itens.quantidade=Quantidade no item é obrigatório
 Size.pedidoInput.itens=O pedido deve ter pelo menos um item
@@ -67,9 +84,13 @@ enderecoEntrega.cidade.id=Código da cidade do endereço de entrega
 enderecoEntrega.cep=CEP do endereço de entrega
 enderecoEntrega.bairro=Bairro do endereço de entrega
 
-restaurante.id=Código do restaurante
-formaPagamento.id=Código da forma de pagamento
+# Pedido Filter
+pedidoFilter.dataCriacaoInicio=Data inicial de criação do pedido
+pedidoFilter.dataCriacaoFim=Data final de criação do pedido
+pedidoFilter.clienteId=Código do cliente
+pedidoFilter.restauranteId=Código do restaurante
 
-
-
+vendaDiariaFilter.dataCriacaoInicio=Data inicial de criação de pedido
+vendaDiariaFilter.dataCriacaoFim=Data final de criação de pedido
+vendaDiariaFilter.restauranteId=Código do restaurante        
 
